Fix dropdown menu pulled too much to left in mobile view

--- a/backend_theme_v10/static/src/less/navbar.less
+++ b/backend_theme_v10/static/src/less/navbar.less
@@ -40,6 +40,10 @@ a.navbar-collapse.collapse {
     border-radius: 0px;
 }
 
+.navbar-nav .open .dropdown-menu {
+	margin-left: 30px;
+}
+
 .panel-heading {
    border-top-left-radius: 0px;
     border-top-right-radius: 0px;
